--- a/myFavoriteMovie.html
+++ b/myFavoriteMovie.html
@@ -10,9 +10,8 @@
     <h2>My favorite movie</h2>
     <p>I watch these movies below when I have free time:</p>
     <ol>
-        <li><img src="/myIntroduction/images/download.jpeg" alt="steam desk video games play" height="80px" width="80px"></li>
-        <li><img src="/myIntroduction/images/16694129388697.jpg" alt="playing soccer" height="80px" width="80px"></li>
-        <li><img src="/myIntroduction/images/orig.png" alt="playing billiard" height="80px" width="80px"></li>
+        <li><img src="/images/lordofring.jpeg" alt="lord of ring" height="150px" width="150px"></li>
+        <li><img src="/images/harrypotter.jpeg" alt="harry potter" height="150px" width="150px"></li>
     </ol>
 </body>
 </html>
