--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <p>Hello everybody, my name is Hieu. I'm 21 years old. I'm studying at Frankfurt Applied Science University, my major is Computer Science. </p>
         <p>Something about my you might want to know: </p>
         <ul>
-            <li><a href="./myHobby.html" target="_blank">My hobby</a></li>
-            <li><a href="./myFavoriteFood.html" target="_blank">My favorite food</a></li>
-            <li><a href="./myFavoriteMovie.html" target="_blank">My favorite movie</a></li>
+            <li><a href="./Pages/myHobby.html" target="_blank">My hobby</a></li>
+            <li><a href="./Pages/myFavoriteFood.html" target="_blank">My favorite food</a></li>
+            <li><a href="./Pages/myFavoriteMovie.html" target="_blank">My favorite movie</a></li>
         </ul>
     </body>
 </html>
